Add notification endpoint Add notification to swagger.yaml Changed Notification type field Add clean data method Add creation of notifications to seeds.py
