# backend/models/__init__.py
@@ -3,3 +3,4 @@ from .beneficiary_model import Beneficiary, Beneficiary_request
 from .user_model import User, Operator
 from .request_model import Request
 from .cluster_model import Cluster
+from .notification_model import Notification
